lazycommmit, please ignore

--- a/demo.html
+++ b/demo.html
@@ -1,19 +1,42 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>html2bigview</title>
-</head>
-<body>
-<div class="jumbotron masthead">
-<div class="container">
-  <h1>BigView</h1>
-  <h2>基于 BigPipe 的 Node.js web 框架。</h2>
-  <p class="masthead-button-links">
-    <a class="btn btn-lg btn-primary btn-shadow" href="https://github.com/bigviewjs/bigview" target="_blank" role="button">BigView 项目地址</a>
-  </p>
-</div>
-</div>
+  <head> 
+    <title>第十二章 出手_大主宰_笔趣阁</title> 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+    <link rel="stylesheet" type="text/css" href="./css/reader.css" /> 
+    <script type="text/javascript" src="./js/zepto.min.js"></script> 
+    <script type="text/javascript" src="./js/main.js"></script> 
+ </head>
+  <body> 
+  <div id="wrapper"> 
+     <div class="content_read"> 
+      <div class="box_con"> 
+       <div class="con_top"> 
+          <a href="/">小说阅读器</a> &gt; 
+          <a href="/xiaoshuo1/">玄幻小说</a> &gt; 
+          <a href="/0/330/">大主宰</a> &gt; 正文 <span class='chapter_title'>第十二章 出手 </span>
+       </div> 
+       <div class="bookname"> 
+        <h1 class='chapter_title'>第十二章 出手</h1> 
+          <div class="bottem1"> 
+             <a href="javascript:;" class='pre_chapter_btn'>上一章</a> ← 
+             <a href="javascript:;" class='chapter_btn'>章节列表</a> → 
+             <a href="javascript:;" class='post_chapter_btn'>下一章</a> 
+             <a href="javascript:;" class='bookmark'>加入书签</a> 
+          </div> 
+       </div> 
+   
+       <div id="content">
+         正文加载中。。。
+       </div>
 
-</body>
+       <div class="bottem2"> 
+         <a href="javascript:;" class='pre_chapter_btn'>上一章</a> ← 
+         <a href="javascript:;" class='chapter_btn'>章节列表</a> → 
+         <a href="javascript:;" class='post_chapter_btn'>下一章</a> 
+         <a href="javascript:;" class='bookmark'>加入书签</a>
+       </div> 
+    </div> 
+   </div> 
+  </div> 
+ </body>
 </html>
